Cyberduck
https://cyberduck.io/

7.1.2
- [Bugfix] Folder showing no more than 1000 files (S3) (#10811)

7.1.1
- [Bugfix] Failure authenticating using SSH agent (SFTP) (#10800)
- [Bugfix] Failure overwriting existing file (Google Storage)
- [Bugfix] Missing hostname verification in TLS handshake when connecting through HTTP proxy

7.1.0
- [Feature] Application running as 64-bit (Windows)
- [Feature] Application package is notarized (macOS)
- [Feature] Support for storage classes (Google Storage)
- [Feature] Support to select region (eu, us, asia) for new buckets (Google Storage)
- [Feature] Support to set lifecycle configuration on bucket (Google Storage)
- [Feature] Support for me-south-1 (Bahrain) region (S3)
- [Bugfix] Number of buckets displayed in browser limited to 1000 (Google Storage)
- [Bugfix] Fails to authenticate where keyboard-interactive mechanism is not supported (SFTP) (#10714)
- [Bugfix] Errors accessing Cryptomator vault (Google Drive, OneDrive)
- [Bugfix] No route to host error with IPv6 only server (macOS)
- [Bugfix] Allow to access files with non printable characters in key name (S3)
- [Bugfix] Use AWS4 signature for pre-signed URLs for AWS in region us-east-1 (S3)
- [Bugfix] Rate limit number of requests (Google Drive) (#10103)
- [Bugfix] Repeated prompt to validate host key when connecting to non standard port (SFTP) (#10772)
- [Bugfix] Segmented downloads fail with longer filenames (#10726)

7.0.2
- [Bugfix] Failure configuring CloudFront distributions (S3) (#10755)
- [Bugfix] Failure authenticating with STS (S3, Credentials from AWS Security Token Service) (#10746)
- [Bugfix] Explicit argument to unlock vault prior an upload (CLI) (#10352)

7.0.1
- [Feature] Default protocol selection for NextCloud & ownCloud
- [Feature] Create share links in NextCloud & ownCloud
- [Bugfix] Connect with application key restricted to single bucket (Backblaze B2) (#10725)
- [Bugfix] Missing files when previously trashed and restored (Google Drive)

7.0.0