@@ -61,9 +61,10 @@
     <a target="_blank" href="https://trac.cyberduck.io/milestone/7.1.2"><strong>Version 7.1.2</strong></a>
 </p>
 <ul>
-    <li><span class="label label-warning">Bugfix</span> Folder showing no more than 1000 files (S3) (<a target="_blank"
-                                                                                                        href="https://trac.cyberduck.io/ticket/10811">#10811</a>)
+    <li><span class="label label-warning">Bugfix</span> Folder showing no more than 1000 files (S3) (
+        <a target="_blank" href="https://trac.cyberduck.io/ticket/10811">#10811</a>)
     </li>
+    <li><span class="label label-warning">Bugfix</span> Failure deleting folder recursively (FTP)</li>
 </ul>
 
 <p>
